examples/test/testpolicy19448.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19448
  namespace: namespace26
spec:
  podSelector:
    matchLabels:
      key28: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value26
          key25: value40
      podSelector:
        matchLabels:
          key18: value18
          key48: value42
